# minpackex

./: CMakeLists.txt  LICENSE.md  README.md  libminpackex.def  minpackex.def  minpackex.pc.cmakein
.github/workflows/: __minpackex-msys2-on-windows.yaml__  __minpackex-on-ubuntu.yaml__  code-coverage-badge.yaml  llvm-flang-on-ubuntu.yaml  minpackex-code-coverage-on-ubuntu.yaml  minpackex-intel-on-windows.yaml  minpackex-llvm-flang-new-msvc-like-on-windows.yaml  minpackex-msys2-on-windows.yaml  minpackex-on-multiple-ubuntu-versions.yaml  minpackex-on-ubuntu.yaml  minpackex-on-ubuntu.yaml__  minpackex-on-windows.yaml  minpackex-on-windows.yaml__  multiple-fortran-compilers-gcc-ubuntu.yaml  multiple-fortran-compilers-multiple-c-compilers-ubuntu.yaml  setup-llvm-flang-new-msvc-like.yaml
cmake/: CreateMinpackexBinaryArchive.cmake.in  CreateMinpackexSourceArchive.cmake.in  FindMinpack.cmake  SetupMinpackexTests.cmake  UninstallMinpackex.cmake.in  minpackex-config-version.cmake.in  minpackex-config.cmake.in  minpackex.h.in  minpackex.pc.in
doc/: README.md
src/: libminpackex.def  minpackex.def  minpackex.h  minpackex_chkder.c  minpackex_dpmpar.c  minpackex_enorm.c  minpackex_hybrd.c  minpackex_hybrd1.c  minpackex_hybrj.c  minpackex_hybrj1.c  minpackex_lmder.c  minpackex_lmder1.c  minpackex_lmdif.c  minpackex_lmdif1.c  minpackex_lmstr.c  minpackex_lmstr1.c  minpackex_param.h
tests/: README.md  SetupMinpackexTests.cmake  tall-in-one-driver.c  tchkder-driver.c  tchkder-minpack.c  tchkder-minpack.h  tchkder-minpackex.c  tchkder-minpackex.h  tdpmpar-driver.c  tdpmpar-minpack.c  tdpmpar-minpack.h  tdpmpar-minpackex.c  tdpmpar-minpackex.h  tenorm-driver.c  tenorm-minpack.c  tenorm-minpack.h  tenorm-minpackex.c  tenorm-minpackex.h  thybrd-driver.c  thybrd-minpack.c  thybrd-minpack.h  thybrd-minpackex.c  thybrd-minpackex.h  thybrd1-driver.c  thybrd1-minpack.c  thybrd1-minpack.h  thybrd1-minpackex.c  thybrd1-minpackex.h  thybrj-driver.c  thybrj-minpack.c  thybrj-minpack.h  thybrj-minpackex.c  thybrj-minpackex.h  thybrj1-driver.c  thybrj1-minpack.c  thybrj1-minpack.h  thybrj1-minpackex.c  thybrj1-minpackex.h  tlmder-driver.c  tlmder-minpack.c  (+28 more)
